--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -255,31 +255,25 @@ Introduction
 \end_layout
 
 \begin_layout Standard
-Homeownership and the likelihood of moving across regions are negatively
- correlated.
- This negative correlation has important implications when considering the
- insurance mechanisms available to consumers in the face of regional shocks
- to housing and labor productivity in a world of incomplete markets.
- The possiblity of moving to another region in the event of a shock is a
- way to self-insure against tail risk.
-\end_layout
-
-\begin_layout Standard
-The aims of this paper are to assess the value of this self insurance mechanism
- and to provide new estimates for spatial labour supply elasticities.
- The innovation in here stems from the fact that in contrast to previous
- papers, I embed the household in a dynamic model with a stochastic regional
- house price and income processes, as opposed to a static economic environment.
- I propose a lifecycle model of consumption and savings, housing tenure
- and location choice, with aggregate uncertainty which affects prices in
- regions differentially.
- Migration serves as a partial insurance device because regions are exposed
- to aggregate shocks to a different degree, consistent with the observed
- data.
- The lifecycle considerations have important implications for the analysis
- of welfare impacts of policy changes, since age groups are differentially
- affected.
- 
+Regional migration rates in the USA are relatively low despite the presence
+ of large regional shocks.
+ However, it would be a mistake to conclude from this observation that the
+ option to migrate across regions has a small value to consumers.
+ The goal of this paper is to provide a measure of having the option to
+ migrate in the context of a lifecycle model with regional income and house
+ price uncertainty, and I show that the value is large.
+ To arrive at this measure, after fitting the model to micro data, I perform
+ a counterfactual experiment whereby all migratory movement from a certain
+ US region is prohibited, much like a country in a trade model that reverts
+ to autarky.
+ I then ask the question of how large of a compensation affected inviduals
+ would demand in order to be indifferent between implementation and not
+ of this policy.
+ I can show that considering homeowners and renters separately in the model
+ is of first order importance for answering this question, since they have
+ very different elasticities of migration with respect to regional shocks.
+ Providing new estimates for this elasticity by ownership status is a by-product
+ of the main exercise which is important for public policy in its own right.
 \end_layout
 
 \begin_layout Standard
@@ -324,17 +318,15 @@ Shocks to regional labor demand affect renters and owners in a similar way,
  i.e.
  labor income of both falls.
  The effects of a fall in house prices is more nuanced, since renters stand
- to benefit from cheaper rent, if this is related to prices, while owners
- may loose wealth invested in the house.
- Furthermore, if house prices reflect the value of local amenities in some
- kind of way, the location becomes less attractive for renters as well as
- for owners.
+ to benefit from cheaper rent, if this is related to prices, and they may
+ be able to purchase a now cheaper house, while owners may loose wealth
+ invested in the house.
  For those reasons, we should expect to see different reactions in the mobility
  of renters and owners in response to different shocks.
  Labor market shocks should make both types more likely to leave the region,
  while price shocks could have differential impacts, depending on the relative
- importance of cheap rents, low value housing asset, lower amenity values,
- and moving costs for renters and owners.
+ importance of cheap rents, low value housing asset, and moving costs for
+ renters and owners.
 \end_layout
 
 \begin_layout Standard
@@ -376,9 +368,9 @@ In the model I develop, there are several mechanisms which affect the home
  ownership choice of individuals.
  A downpayment requirement means that only individuals with sufficient cash
  on hand are able to buy a house at the current price.
- The model assumes a preference for owner-occupied accomodation, which also
- influences the buying decision next to age, the probability of moving,
- and beliefs about future shocks.
+ The model assumes a preference for owner-occupied accomodation and a local
+ amenity, both of which influence the buying decision next to age, the probabili
+ty of moving, and beliefs about future shocks.
 \end_layout
 
 \begin_layout Standard
@@ -396,7 +388,7 @@ key "kennan2003effect"
 
 \end_inset
 
-, since it provides an additional reason for agents to move in response
+, since it provides an fundamental reason for agents to move in response
  to a change in their economic environment, rather than as a result of idiosyncr
 atic preference shocks alone.
  Including time-varying location characteristics, however, increases computation
@@ -409,13 +401,12 @@ al demands substantially.
 I estimate the model using a simulated method of moments estimator.
  I find that the model fits the data very well along the main dimensions
  of interest, which are mobility and ownership patterns over the lifecycle,
- ownership rates by region, as well as wealth accumulation over the lifecycle
- and by region.
- After fitting the model to the data, I first illustrate how adding ownership
- and assets to a dynamic migration model affects behaviour.
- I then show how the model reacts to large regional shocks, before I move
- on to compute a measure of the value of the migration option and an estimation
- of spatial labor supply elasticities.
+ ownership rates by region, migration flows across regions, as well as wealth
+ accumulation over the lifecycle and by region.
+ After fitting the model to the data, I first show how the model reacts
+ to large regional shocks, I then estimate spatial labor supply elasticities
+ for renters and owners separately before I move on to compute a measure
+ of the value of the migration option.
 \end_layout
 
 \begin_layout Standard
@@ -439,25 +430,27 @@ key "kennan2003effect"
 Migration is a low probability event in both data and model.
  Nevertheless, the welfare implications are large.
  I conduct an experiment whereby moving away from a certain region is prohibited.
- I compute the expected lifetime utility of agents in the region under both
+ I compute the average lifetime utility of agents in the region under both
  scenarios, and I find that removing the option to move away from the region
- reduces expected utility by 5.1%.
- This implies that residents of this region would demand a 4.4% increase
- in per period consumption over their lifecycle in order to be indifferent
- to the baseline environment.
- Conditioning on age when computing expected utility reveals that the cost
- of not being able to move is largest for younger individuals, and it gradually
- fades out as agents grow older.
- Finally, this paper provides new estimates for the elasticity of labor
- supply with respect to a region-level income shock.
- The estimates vary significantly for renters and owners, the elasticity
- is 1.5 for renters and 0.18 for owners.
- 
+ reduces utility by 1.22%.
+ Conditioning on young versus old household, one finds a reduction of 3.66%
+ for the former and 0.74% for the latter.
+ In terms of compensating consumption that would achieve indifference for
+ each of those groups, one would have to increase baseline consumption by
+ 2.2%, 5% and 1.5% for all residents, young residents and old residents, respectiv
+ley.
+ To properly understand these results it is important to keep in mind that
+ I obtain estimates for the elasticity of labor supply with respect to a
+ region-level income shock which vary significantly for renters and owners:
+ I find an elasticity of 1.5 for renters and 0.18 for owners.
+ Given that the ownership rate varies significantly by age, one can see
+ that young, mobile renters are the group which incurs the greatest welfare
+ loss from reduced mobility.
 \end_layout
 
 \begin_layout Standard
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 Government policies might help to increase labor market efficiency, housing
@@ -531,7 +524,24 @@ key "kennan2003effect"
  Their main finding is that expected income is an important determinant
  of migration decisions, and their framework requires large moving costs
  to match observed migration decisions.
+ The model features location-specific match effects in wages and amenity
+ which are uncertain ex-ante, so the consumer has to move to a location
+ in order to discover their values.
+ The distributions of those match effects in each location are stationary.
+ In their model, after having learned the value of the current location,
+ the only reason for a move is a favourable realization of an i.i.d.
+ preference shock which might occur in some future period – there is no
+ change in economic fundamentals which might encourage a move, like a shock
+ to wages, for example.
+ Relaxing this feature as well as adding housing and savings decisions are
+ my main contributions to their paper.
+ I am able to let regions experience differential income and price shocks
+ over time, thereby providing an additional reason to move over and above
+ idiosyncratic shocks.
  
+\end_layout
+
+\begin_layout Standard
 \begin_inset CommandInset citation
 LatexCommand cite
 key "gemici2007family"
@@ -557,12 +567,15 @@ key "gemici2007family"
 
  to include housing choices and focuses on the response of owners to individual
  labor market shocks.
- 
-\end_layout
+ The main differences to 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "winkler2010effect"
 
-\begin_layout Standard
-The main differences to this paper are the way I model regional price and
- income dynamics and the assumption about how job search takes place.
+\end_inset
+
+ are the way I model regional price and income dynamics and the assumption
+ about how job search takes place.
  Regarding regional dynamics, I am able to allow for shocks which are correlated
  across regions and with an aggregate component that is persistent, while
  they are assumed to be independent in 
@@ -596,12 +609,7 @@ e location.
  they will fare in each.
  Secondly it allows for reasons other than job offers to trigger a move,
  which is a feature of the data, as I will show below.
- Finally, it is interesting to note that when simulating the effects of
- abolishing the mortgage interest deduction, I correct for a GE effect on
- house prices, which is likely to occur as a result of the policy change,
- and I enforce revenue neutrality by redistributing saved tax receipts,
- which is not done in his paper.
- I find that that welfare implications strongly depend on those features.
+ 
 \end_layout
 
 \begin_layout Standard
@@ -794,7 +802,7 @@ key "halket2014saving"
 
 \begin_layout Standard
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 Finally, the paper relates to the literature on tax treatment of housing
@@ -1323,7 +1331,7 @@ reference "tab:SIPP-nummoves"
 status collapsed
 
 \begin_layout Plain Layout
-Just for comparison, the estimation sample in 
+By way of comparison, the estimation sample in 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "kennan2003effect"
@@ -1332,6 +1340,8 @@ key "kennan2003effect"
 
  is drawn from the geo-coded version of NLSY79 and contains 124 interstate
  moves.
+ The disadvantage of SIPP is I can track an individual for at most four
+ years.
 \end_layout
 
 \end_inset
@@ -1379,7 +1389,7 @@ What was the main reason for moving
 \begin_inset Quotes erd
 \end_inset
 
-.
+ where respondents are offered 19 options to choose from.
  The results are displayed in table 
 \begin_inset CommandInset ref
 LatexCommand ref
@@ -1387,10 +1397,11 @@ reference "tab:CPS-reason-move"
 
 \end_inset
 
-.
+, and the caption to the table provides the key according to which I group
+ the 19 options into four categories.
  It is striking to note that even though we are conditioning on moves across
  Division boundaries (and thus think of long-range moves), the percentage
- of people citing 
+ of people citing category 
 \begin_inset Quotes eld
 \end_inset
 
@@ -1407,6 +1418,19 @@ housing
  Summing up in the bottom row of the table, we see that 55% say work was
  the main reason, 24% refer to housing and the remaining 21% is split between
  family and other reasons.
+ The model to be presented below addresses each of these categories: Individuals
+ can move out of work-related concerns (regional and individual level income
+ fluctuations), because of housing considerations (regional house price
+ fluctuation), for family reasons (stochastic age-dependent arrival of children)
+ as well reasons classified as 
+\begin_inset Quotes eld
+\end_inset
+
+other
+\begin_inset Quotes erd
+\end_inset
+
+, which are accounted for by an idiosyncratic preference shock.
 \end_layout
 
 \begin_layout Standard
@@ -1418,7 +1442,8 @@ reference "tab:D2D-probit"
 \end_inset
 
  I present estimates from a statistical analysis of the determinants of
- cross division moves from SIPP data.
+ cross division moves from SIPP data, abstracting away from the severe endogenei
+ty issues which the structural model below will account for.
  I regress a binary indicator for whether or not a cross division move took
  place in a given year on a set of explanatory variables which relate to
  the household in question in a probit regression.
@@ -1445,6 +1470,42 @@ ty.
  being an owner.
  The house price to income ratio does not play a significant role in this
  specification.
+\end_layout
+
+\begin_layout Paragraph
+Regional Income and House Price Risk.
+\end_layout
+
+\begin_layout Standard
+As a final piece of motivation I present an overview of the variation in
+ house price and average income at the division level.
+ I mentioned above that the shocks to each region exhibit a strong correlation
+ as well as a high degree of persistence.
+ This is best to see using a plot of the time series of regional house price
+ and average income indices and how they relate to the national average
+ of that index.
+ Figures 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Regional-House-Price-data"
+
+\end_inset
+
+ and 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Regional-Income-data"
+
+\end_inset
+
+ present the results of such an exercise.
+ In both cases, we can see that nationwide shocks occur to varying degrees
+ at the regional level; and that all series exhibit a high degree of persistence
+, i.e.
+ they are visibly different from an i.i.d.
+ process.
+ The model I will present now takes those patterns seriously and proposes
+ a way to solve and estimate the resulting high-dimensional problem.
 \end_layout
 
 \begin_layout Standard
@@ -1828,6 +1889,99 @@ name "tab:D2D-probit"
 \end_layout
 
 \begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\noindent
+\align center
+\begin_inset Graphics
+	filename /Users/florian.oswald/Dropbox/research/mobility/output/data/sipp/agg_reg_p.pdf
+	scale 80
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Regional House Price indices vs National average.
+ FHFA house price index.
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Regional-House-Price-data"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status collapsed
+
+\begin_layout Plain Layout
+\noindent
+\align center
+\begin_inset Graphics
+	filename /Users/florian.oswald/Dropbox/research/mobility/output/data/sipp/agg_reg_y.pdf
+	scale 80
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Regional per capita personal income 
+\begin_inset Formula $q_{dt}$
+\end_inset
+
+ from BEA vs the national average index 
+\begin_inset Formula $Q$
+\end_inset
+
+, for which I use real per capital GDP.
+\begin_inset CommandInset label
+LatexCommand label
+name "fig:Regional-Income-data"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -1866,11 +2020,11 @@ region
 \begin_inset Formula $d\in D$
 \end_inset
 
- for a total of 
+ in any given period, and for a total of 
 \begin_inset Formula $T$
 \end_inset
 
- years of age.
+ years overall.
  At each age 
 \begin_inset Formula $t$
 \end_inset
@@ -1889,45 +2043,15 @@ region
 \begin_inset Formula $h$
 \end_inset
 
- and an unobservable location preference shock.
-\end_layout
-
-\begin_layout Standard
-Individuals are subject to uncertainty at both the aggregate and individual
- level.
- At the aggregate level, regional house price 
-\begin_inset Formula $p$
-\end_inset
-
- and average labor productivity levels 
-\begin_inset Formula $q$
-\end_inset
-
- fluctuate.
- This allows some scope for regional migration as an insurance mechanism.
- The regional fluctuations are driven by a common set of low dimensional
- stochastic factors denoted 
-\begin_inset Formula $P$
-\end_inset
-
- and 
-\begin_inset Formula $Q$
+ and from local amenity 
+\begin_inset Formula $A_{d}$
 \end_inset
 
 .
- This reflects the fact the regional shocks to both house prices and average
- labor income are highly correlated.
- It also allows for fluctuations in the underlying aggregate factors 
-\begin_inset Formula $P$
-\end_inset
+\end_layout
 
- and 
-\begin_inset Formula $Q$
-\end_inset
-
- to have differential impacts across regions, while maintaining a degree
- of computational tractability.
- Every individual in region 
+\begin_layout Standard
+Every individual in region 
 \begin_inset Formula $d$
 \end_inset
 
@@ -1943,17 +2067,70 @@ Individuals are subject to uncertainty at both the aggregate and individual
 \begin_inset Formula $t$
 \end_inset
 
-.
- In addition to that, 
+, where 
 \begin_inset Formula $q_{dt}$
 \end_inset
 
  enters the individual wage equation as a level shifter.
  At the individual level uncertainty enters the model through an idiosyncratic
- component of income risk, a Markovian process that models changes in household
- size over the lifecycle, and a location–specific preference shock, which
- is assumed identically and independently distributed across agents, regions
- and time.
+ and persistent component of income risk 
+\begin_inset Formula $z_{it}$
+\end_inset
+
+, a Markovian process that models changes in household size over the lifecycle
+ 
+\begin_inset Formula $s_{it}$
+\end_inset
+
+, and a location–specific preference shock 
+\begin_inset Formula $\varepsilon_{idt}$
+\end_inset
+
+, which is assumed identically and independently distributed across agents,
+ regions and time.
+ In short, region 
+\begin_inset Formula $d$
+\end_inset
+
+ is characterized by a tuple 
+\begin_inset Formula $(q_{dt},p_{dt},A_{d})$
+\end_inset
+
+, households can move to a different region subject to a moving cost, and
+ they hold expectations about the evolution of 
+\begin_inset Formula $\left(q_{dt+1},p_{dt+1}\right),\forall d$
+\end_inset
+
+ in such a way that is compatible with the evidence from figures 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Regional-House-Price-data"
+
+\end_inset
+
+ and 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "fig:Regional-Income-data"
+
+\end_inset
+
+ (i.e.
+ correlated shocks across region and high persistence) and at the same time
+ computationally feasible, as detailed below.
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+Let it suffice for now to state that taking into account 9 different house
+ price and labour income processes would not be feasible, and therefore
+ the solution will seek to reduce the number of relevant dimensions of these
+ series.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -2160,33 +2337,55 @@ When moving from region
 \end_inset
 
 , as mentioned above.
- The shape of 
+ If we imagine 
+\begin_inset Formula $G_{\text{stay}}$
+\end_inset
+
+ and 
 \begin_inset Formula $G_{\text{move}}$
 \end_inset
 
- determines the probability with which a mover with current value 
+ as transition matrices from state 
 \begin_inset Formula $z$
 \end_inset
 
- can expect to draw a new value 
+ today to state 
 \begin_inset Formula $z'$
 \end_inset
 
- after moving to 
-\begin_inset Formula $d'$
+ tomorrow, and we think it is harder to predict 
+\begin_inset Formula $z'$
 \end_inset
 
-.
- The data will be informative about whether there is mean reversion or high
- persistence in 
+ for movers than for stayers, given 
+\begin_inset Formula $z$
+\end_inset
+
+, then the corresponding distribution of 
+\begin_inset Formula $z'$
+\end_inset
+
+ will be more equally distruted according to 
 \begin_inset Formula $G_{\text{move}}$
 \end_inset
 
- for movers.
+ than in 
+\begin_inset Formula $G_{\text{stay}}$
+\end_inset
+
+.
+ I will estimate both objects from data as described in subsection 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:copula-estimates"
+
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Subsection
-National factors 
+Dimensionality Redcution: National factors 
 \begin_inset Formula $P$
 \end_inset
 
@@ -2198,7 +2397,15 @@ National factors
 \end_layout
 
 \begin_layout Standard
-I assume the national state variables 
+As stated above, allowing 
+\begin_inset Formula $\left(q_{dt+1},p_{dt+1}\right),\forall d$
+\end_inset
+
+ to vary in an unrestricted fashion would make computation of this model
+ infeasible.
+ I assume that agents use a 2-dimensional factor model to infer regional
+ prices.
+ To this end I define aggregate state variables 
 \begin_inset Formula $Q$
 \end_inset
 
@@ -2206,7 +2413,8 @@ I assume the national state variables
 \begin_inset Formula $P$
 \end_inset
 
- evolve according to a stationary vector autoregression of order one (VAR(1)).
+, which evolve according to a stationary vector autoregression of order
+ one (VAR(1)).
  At date 
 \begin_inset Formula $t$
 \end_inset
@@ -2215,7 +2423,7 @@ I assume the national state variables
 \begin_inset Formula $\mathbf{F}_{t}$
 \end_inset
 
- containing both factors 
+ containing both 
 \begin_inset Formula $P_{t}$
 \end_inset
 
@@ -2224,7 +2432,7 @@ I assume the national state variables
 \end_inset
 
 .
- The VAR(1) process is defined in equation 
+ The process is formally defined in equation 
 \begin_inset CommandInset ref
 LatexCommand eqref
 reference "eq:VAR-process-agg"
@@ -2261,7 +2469,7 @@ P_{t}
 
 \end_layout
 
-\begin_layout Subsection
+\begin_layout Subsubsection
 Mapping aggregate factors to regional prices
 \end_layout
 
@@ -2304,7 +2512,7 @@ reference "eq:VAR-reg-determ"
 \begin_inset Formula $\mathbf{a}_{d}$
 \end_inset
 
- is a matrix of coefficients specific to region 
+ is a 2x2 matrix of coefficients specific to region 
 \begin_inset Formula $d$
 \end_inset
 
@@ -2325,16 +2533,7 @@ p_{dt}
 \end_layout
 
 \begin_layout Standard
-I provide some illustration regarding the fit this model provides to the
- data in section 
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "subsec:Aggregate-to-regional"
-
-\end_inset
-
-, where I describe the estimation of this part of the model in greater detail.
- Notice that the great virtue of this formulation is that the relevant price
+Notice that the great virtue of this formulation is that the relevant price
  and income related state variables in each region are subsumed in 
 \begin_inset Formula $\mathbf{F}_{t}$
 \end_inset
@@ -2348,7 +2547,64 @@ reference "subsec:Aggregate-to-regional"
 \end_inset
 
 .
+ To be completely clear, equation 
+\begin_inset CommandInset ref
+LatexCommand eqref
+reference "eq:VAR-reg-determ"
+
+\end_inset
+
+ shuts down any uncertainty at the regional level once 
+\begin_inset Formula $\mathbf{F}_{t}$
+\end_inset
+
+ and 
+\begin_inset Formula $\mathbf{a}_{d}$
+\end_inset
+
+ are known.
+\begin_inset Foot
+status collapsed
+
+\begin_layout Plain Layout
+One could say that the formulation is missing a shock, e.g.
  
+\begin_inset Formula $\mathbf{a}_{d}\mathbf{F}_{t}+\epsilon_{dt},\epsilon_{dt}\sim N(0,\sigma^{2})$
+\end_inset
+
+.
+ Adding such a shock would increase the state space by a factor equal to
+ the number of integration nodes to be used for the approximation of the
+ resulting integral, which is a big cost.
+ I don't expect any major difference in my results.
+ The fit of this approximation is very good, as will be shown further below.
+\end_layout
+
+\end_inset
+
+ Shocks materialize in region 
+\begin_inset Formula $d$
+\end_inset
+
+ as a transformation of aggregate shocks to 
+\begin_inset Formula $Q$
+\end_inset
+
+ and/or 
+\begin_inset Formula $P$
+\end_inset
+
+.
+ The implications of this will be discussed in greater detail in section
+ 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "subsec:Aggregate-to-regional"
+
+\end_inset
+
+ when I describe estimation of this part of the model and where I also provide
+ some illustration regarding the fit of this model to the data.
 \end_layout
 
 \begin_layout Subsection
@@ -4090,6 +4346,25 @@ Copula estimates for
 \color none
 
 \begin_inset Formula $G_{\text{move}}$
+\end_inset
+
+
+\family default
+\series default
+\shape default
+\size default
+\emph default
+\bar default
+\strikeout default
+\uuline default
+\uwave default
+\noun default
+\color inherit
+
+\begin_inset CommandInset label
+LatexCommand label
+name "subsec:copula-estimates"
+
 \end_inset
 
 
@@ -7948,7 +8223,7 @@ name "tab:Regional-2-indiv-income"
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \noindent
